app/superupperhack.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    debug.openshift.io/source-container: container-00
    debug.openshift.io/source-resource: /v1, Resource=nodes/crc-x4qnm-master-0
  creationTimestamp: null
  name: hello-openshift-59b95775-qwert
spec:
  containers:
  - command:
    - /bin/sh
    image: registry.access.redhat.com/ubi8/ubi
    name: container-00
    resources: {}
    securityContext:
      privileged: true
      runAsUser: 0
    stdin: true
    stdinOnce: true
    tty: true
    volumeMounts:
    - mountPath: /host
      name: host
  hostNetwork: true
  hostPID: true
  restartPolicy: Never
  volumes:
  - hostPath:
      path: /
      type: Directory
    name: host
